Labs/01 Install minikube &  argocd/clusters/argocd/prod/argocd-ing.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: argo-cd-ui
spec:
  rules:
    - host: argocd-prod.fake
      http:
        paths:
          - path: /
            backend:
              service: 
                name: argocd-server
                port: 
                 number: 443
  tls:
    - hosts:
        - argocd-prod.fake
      secretName: argocd-secret
